web-infras/parser/tests/fixtures/esprima/ES2016/exponent/invalid_typeof_exp/output.txt
[SyntaxError]: Illegal expression. Wrap left hand side or entire exponentiation in parentheses (1,1)
1|typeof x ** y
 |^
